Fix Responsive on Mobile devices

--- a/src/app/home/home.component.sass
+++ b/src/app/home/home.component.sass
@@ -18,7 +18,7 @@
             @include laptop
                 height: auto
             @include mobile
-                height: 15rem
+                height: 16rem
     .h1
         background-color: $light-black
         color: white
@@ -33,7 +33,7 @@
                 font-size: 1.5rem
             @include mobile
                 font-size: 1.5rem
-                padding: 4rem 0rem 4.1rem 0rem
+                padding: 4rem 0rem 1rem 0rem 
         .line1
             width: 100%;
             height: 0.2rem;
@@ -87,6 +87,8 @@
                 color: white
                 font-size: 1.5rem
                 padding: 3rem 2rem 5rem 2rem;
+                @include mobile
+                    flex-direction: column
                 h4
                     font-weight: normal
                     @include laptop
@@ -99,6 +101,8 @@
                     .logos
                         display: flex
                         flex-direction: row
+                        @include mobile
+                            align-content: center
                         .image
                             margin-left: 1rem
                             margin-top: 1rem
@@ -109,18 +113,25 @@
                                     width: 2rem
                     .rights
                         margin-top: 2rem
+                        @include mobile
+                            margin: 1rem 0rem
                         p
                           font-size: 1rem
                           text-align: center
                           diplay: block
                           margin: 0
+                        
 
                 .contact
+                    @include mobile
+                        text-align: center
                     h4
                       font-size: 1.2rem;
                       margin: 0
                       font-weight: bold
                       margin-left: 38px
+                      @include mobile
+                        margin: 0
                     .item
                         .icon
                             min-width: 30px
@@ -133,15 +144,24 @@
 
                 .time
                   min-width: 20%
+                  @include mobile
+                    text-align: center
+                    margin-top: 1rem
+                    margin-bottom: 0rem
                   h4
                     font-size: 1.2rem;
                     margin: 0
+                    font-weight: bold
                   p
                     margin: 5px 0
                     font-size: 1rem
                 .brand
                   position: absolute
-                  right: 15px
+                  right: 1rem
+                  display: flex
+                  align-content: flex-end
+                  @include mobile
+                    margin-top: 2rem
                   img
                       height: 10rem
                       width: auto
