--- a/src/app/shared/navbar/navbar.component.sass
+++ b/src/app/shared/navbar/navbar.component.sass
@@ -13,6 +13,8 @@
     display: flex
     align-items: flex-end;
     padding: 0;
+    @include mobile
+        display: none
     .logo
         padding-left: 10%;
         padding-top: 25px;
